--- a/index.html
+++ b/index.html
@@ -84,7 +84,19 @@
       // The main difference from fetchOne() will be the URL you request from; check
       // the writeup to view the URL pattern for fetch one and fetch all
       function fetchAll() {
-        // TODO
+        document.getElementById("recordForm").style.display = "none";
+        document.getElementById("recordIDcontainer").style.display = "none";
+
+        let currEP = document.getElementById('endpoint').value;
+
+        fetch(currEP, { method: 'GET' })
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById('output').innerText = JSON.stringify(data);
+        })
+        .catch(error => {
+            document.getElementById('output').innerText = error
+        });
       }
 
       // This function should fetch one entry from the given endpoint.
@@ -92,23 +104,91 @@
       // The main difference from fetchAll() will be the URL you request from; check
       // the writeup to view the URL pattern for fetch one and fetch all
       function fetchOne() {
-        // TODO
+        document.getElementById("recordForm").style.display = "none";
+        document.getElementById("recordIDcontainer").style.display = "none";
+
+        let id = prompt("Enter record id");
+        let currEP = document.getElementById('endpoint').value+"/"+id;
+
+        fetch(currEP, { method: 'GET' })
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById('output').innerText = JSON.stringify(data);
+        })
+        .catch(error => {
+            document.getElementById('output').innerText = error
+        });
       }
 
       // This function should use fetch to create one entry in the given endpoint.
       // From the 4 CRUD actions, this is the CREATE action, and uses the POST http method.
       // The main difference from updateRecord() will be the URL you send data to; check
       // the writeup to view the URL pattern for create and update
-      function createRecord() {
-        // TODO
+      function createRecord(event) {
+        if(event == 'show') {
+          document.getElementById("recordForm").style.display = "inline";
+          document.getElementById("recordIDcontainer").style.display = "none";
+        } else if(event == 'submit') {
+          let currEP = document.getElementById('endpoint').value;
+          let author = document.getElementById('author').value;
+          let title = document.getElementById('title').value;
+          let data = 
+            {
+              author: author,
+              title: title,
+            }
+
+          fetch(currEP, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+          })
+          .then(res => res.json())
+          .then(data => {
+            document.getElementById('output').innerText = JSON.stringify(data);
+          })
+          .catch(error => {
+            document.getElementById('output').innerText = error;
+          });
+        }
       }
 
       // This function should use fetch to update one existing entry in the given endpoint.
       // From the 4 CRUD actions, this is the UPDATE action, and uses the PUT http method.
       // The main difference from createRecord() will be the URL you send data to; check
       // the writeup to view the URL pattern for create and update
-      function updateRecord() {
-        // TODO
+      function updateRecord(event) {
+        if(event == 'show') {
+          document.getElementById("recordForm").style.display = "inline";
+          document.getElementById("recordIDcontainer").style.display = "inline";
+        } else if(event == 'submit') {
+          let recordID = document.getElementById('recordID').value;
+          let currEP = document.getElementById('endpoint').value+"/"+recordID;
+          let author = document.getElementById('author').value;
+          let title = document.getElementById('title').value;
+          let data = 
+            {
+              author: author,
+              title: title,
+            }
+
+          fetch(currEP, {
+            method: 'PUT',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+          })
+          .then(res => res.json())
+          .then(data => {
+            document.getElementById('output').innerText = JSON.stringify(data);
+          })
+          .catch(error => {
+            document.getElementById('output').innerText = error
+          });
+        }
       }
 
       // This function should use fetch to delete one existing entry in the given endpoint.
@@ -117,7 +197,22 @@
       // request; check the writeup to view the URL pattern for get one and delete. THERE IS NO 
       // delete all, only delete one.
       function deleteRecord() {
-        // TODO
+        document.getElementById("recordForm").style.display = "none";
+        document.getElementById("recordIDcontainer").style.display = "none";
+
+        let id = prompt("Enter record id");
+        let currEP = document.getElementById('endpoint').value+"/"+id;
+
+        fetch(currEP, {
+          method: 'DELETE',
+        })
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById('output').innerText = JSON.stringify(data);
+        })
+        .catch((error) => {
+          document.getElementById('output').innerText = error;
+        });
       }
 
       window.addEventListener('DOMContentLoaded', () => {
