--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
         let currEP = document.getElementById('endpoint').value;
 
         fetch(currEP, { method: 'GET' })
-        .then(res => res.json())
+        .then(res => {
+          if (res.status < 200 || res.status >= 300) {
+            throw res.statusText+": "+res.status;
+          } else {
+            return res.json();
+          }
+        })
         .then(data => {
           document.getElementById('output').innerText = JSON.stringify(data);
         })
@@ -111,7 +117,13 @@
         let currEP = document.getElementById('endpoint').value+"/"+id;
 
         fetch(currEP, { method: 'GET' })
-        .then(res => res.json())
+        .then(res => {
+          if (res.status < 200 || res.status >= 300) {
+            throw res.statusText+": "+res.status;
+          } else {
+            return res.json();
+          }
+        })
         .then(data => {
           document.getElementById('output').innerText = JSON.stringify(data);
         })
@@ -147,7 +159,13 @@
             },
             body: JSON.stringify(data),
           })
-          .then(res => res.json())
+          .then(res => {
+            if (res.status < 200 || res.status >= 300) {
+              throw res.statusText+": "+res.status;
+            } else {
+              return res.json();
+            }
+          })
           .then(data => {
             document.getElementById('output').innerText = JSON.stringify(data);
           })
@@ -185,7 +203,13 @@
             },
             body: JSON.stringify(data),
           })
-          .then(res => res.json())
+          .then(res => {
+            if (res.status < 200 || res.status >= 300) {
+              throw res.statusText+": "+res.status;
+            } else {
+              return res.json();
+            }
+          })
           .then(data => {
             document.getElementById('output').innerText = JSON.stringify(data);
           })
@@ -210,7 +234,13 @@
         fetch(currEP, {
           method: 'DELETE',
         })
-        .then(res => res.json())
+        .then(res => {
+          if (res.status < 200 || res.status >= 300) {
+            throw res.statusText+": "+res.status;
+          } else {
+            return res.json();
+          }
+        })
         .then(data => {
           document.getElementById('output').innerText = JSON.stringify(data);
         })
